<resources>
    <string name="app_name">My Modules</string>
    <string name="c203">C203 Web AppIn Development in php</string>
    <string name="c206">C206 Software Development Process</string>
    <string name="c218">C218 UI/UX Design for Apps</string>
    <string name="c235">C235 IT Security and Management</string>
    <string name="c346">C346 Mobile App Development</string>
    <string name="g953">G953 Life Skills III</string>

    <string name="academic_year_label">Academic Year: 2023</string>
    <string name="semester_label">Semester: 1</string>
    <string name="back_label">Back</string>
</resources>