<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonC203"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:backgroundTint="#03AC13"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alata"
        android:text="@string/c203" />

    <Button
        android:id="@+id/buttonC206"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:backgroundTint="#03AC13"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alata"
        android:text="@string/c206" />

    <Button
        android:id="@+id/buttonC218"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:backgroundTint="#03AC13"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alata"
        android:text="@string/c218" />

    <Button
        android:id="@+id/buttonC235"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:backgroundTint="#03AC13"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alata"
        android:text="@string/c235" />

    <Button
        android:id="@+id/buttonC346"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:backgroundTint="#03AC13"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alata"
        android:text="@string/c346" />

    <Button
        android:id="@+id/buttonG953"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:backgroundTint="#03AC13"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alata"
        android:text="@string/g953" />

</LinearLayout>